[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
readme = "README.md"
publish = false
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
description = "Solutions to Advent of Code 2023"
documentation = "https://github.com/aalekhpatel07/advent-of-code-2023"
homepage = "https://github.com/aalekhpatel07/advent-of-code-2023"
repository = "https://github.com/aalekhpatel07/advent-of-code-2023.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[dependencies]
