[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
readme = "README.md"
publish = false
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
description = "Solutions to Advent of Code 2023"
documentation = "https://github.com/aalekhpatel07/advent-of-code-2023"
homepage = "https://github.com/aalekhpatel07/advent-of-code-2023"
repository = "https://github.com/aalekhpatel07/advent-of-code-2023.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[features]
default = ["submit"]
inputs = ["dep:bytes", "dep:chrono", "dep:clap", "dep:reqwest", "dep:tokio", "dep:dotenv"]
submit = ["dep:reqwest"]

[[bin]]
name = "get-inputs"
path = "src/bin/download_inputs.rs"
required-features = ["inputs"]

[dependencies]
bytes = { version = "1.5.0", optional = true }
chrono = { version = "0.4.31", optional = true }
clap = { version = "4.4.11", features = ["derive", "env"], optional = true }
colored = "2.1.0"
dotenv = { version = "0.15.0", optional = true }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["cookies", "blocking"], optional = true }
tokio = { version = "1.35.0", features = ["rt-multi-thread", "tokio-macros", "full"], optional = true }
