[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
readme = "README.md"
publish = false
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
description = "Solutions to Advent of Code 2023"
documentation = "https://github.com/aalekhpatel07/advent-of-code-2023"
homepage = "https://github.com/aalekhpatel07/advent-of-code-2023"
repository = "https://github.com/aalekhpatel07/advent-of-code-2023.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[features]
default = ["day-12", "day-13", "day-14", "day-16", "day-17", "day-18"]
inputs = ["dep:bytes", "dep:chrono", "dep:clap", "dep:reqwest", "dep:tokio", "dep:dotenv"]
submit = ["dep:reqwest"]
day-12 = ["dep:rayon"]
day-13 = ["dep:rayon"]
day-14 = []
day-15 = []
day-16 = ["dep:rayon"]
day-17 = ["dep:rayon", "dep:pathfinding"]
day-18 = []


[[bin]]
name = "get-inputs"
path = "src/bin/download_inputs.rs"
required-features = ["inputs"]

[[bin]]
name = "day-12"
path = "src/bin/day-12.rs"
required-features = ["day-12"]


[[bin]]
name = "day-13"
path = "src/bin/day-13.rs"
required-features = ["day-13"]

[[bin]]
name = "day-14"
path = "src/bin/day-14.rs"
required-features = ["day-14"]


[[bin]]
name = "day-15"
path = "src/bin/day-15.rs"
required-features = ["day-15"]


[[bin]]
name = "day-17"
path = "src/bin/day-17.rs"
required-features = ["day-17"]


[[bin]]
name = "day-18"
path = "src/bin/day-18.rs"
required-features = ["day-18"]

[dependencies]
bytes = { version = "1.5.0", optional = true }
chrono = { version = "0.4.31", optional = true }
clap = { version = "4.4.11", features = ["derive", "env"], optional = true }
colored = "2.1.0"
dotenv = { version = "0.15.0", optional = true }
pathfinding = { version = "4.6.0", optional = true }
rayon = { version = "1.8.0", optional = true }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["cookies", "blocking"], optional = true }
thiserror = "1.0.51"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "tokio-macros", "full"], optional = true }
